--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pac-Man Game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="game" style="position: relative; width: 100%; height: 600px;"> <!-- Adjust width and height as needed -->
+    <div id="game" style="position: relative; width: 100%; height: 600px;"> 
         <button id="addPacMan" width='200' height='30'>Add PacMan</button>
         <button id="startGame" width='200' height='30'>Start Game</button>
+        <button id="pauseGame" width='200' height='30'>Pause Game</button> 
+        <button id="resetGame" width='200' height='30'>Reset Game</button>
     </div>
 
     <!-- Link to the external JavaScript file -->
